dobble.css
/* ... */
#minigameName{
  color: #449715;
  padding-right: 15px;
}

/* Countdown*/
.dbl_invisible {
  display: none;
  /*transition: all 1s ease-out;*/
}

.dbl_hidden {
  visibility: hidden;
  /*transition: all 1s ease-out;*/
}

.dbl_cover {
  background: #b8e067;
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  color: white;
  text-shadow: 5px 5px 6px #449715;
  text-align: center;

  font-weight: 700;
  overflow: hidden;
  font-family: "Montserrat", sans-serif;

  width: 100%;
  height: 90vh;
  opacity: 1;

  animation: dbl_fade-out 5s;
}

.dbl_content {
  width: 100%;
}

#dbl_fly-in {
  font-size: 20em;
  height: 100%;
  justify-content: center;
  align-items: center;
  display: flex;
}

#dbl_fly-in div {
  position: fixed;
  margin: 2vh 0;
  opacity: 0;
  width: 80%;
  animation: dbl_switch 3s linear;
}

#dbl_fly-in div:nth-child(1) {
  animation-delay: 1s;
}
#dbl_fly-in div:nth-child(2) {
  animation-delay: 2s;
}
#dbl_fly-in div:nth-child(3) {
  animation-delay: 3s;
}

@keyframes dbl_fade-out {
  0%,
  85% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@keyframes dbl_switch {
  0% {
    opacity: 0;
    filter: blur(20px);
    transform: scale(12);
  }
  8% {
    opacity: 1;
    filter: blur(0);
    transform: scale(1);
  }
  30% {
    opacity: 1;
    filter: blur(0);
    transform: scale(1);
  }
  40% {
    opacity: 0;
    transform: scale(0);
  }

  100% {
    opacity: 0;
  }
}

/* Cards */

.symbol {
  position: absolute;
  background-image: url("./img/cards/symbols.png");
  background-size: 1000%;
  cursor: pointer;
}

.symbol.symbol-00 {
  background-position: 0 0;
}
.symbol.symbol-01 {
  background-position: 11.11% 0;
}
.symbol.symbol-02 {
  background-position: 22.22% 0;
}
.symbol.symbol-03 {
  background-position: 33.33% 0;
}
.symbol.symbol-04 {
  background-position: 44.44% 0;
}
.symbol.symbol-05 {
  background-position: 55.55% 0;
}
.symbol.symbol-06 {
  background-position: 66.66% 0;
}
.symbol.symbol-07 {
  background-position: 77.77% 0;
}
.symbol.symbol-08 {
  background-position: 88.88% 0%;
}
.symbol.symbol-09 {
  background-position: 99.99% 0%;
}

.symbol.symbol-10 {
  background-position: 0% 20%;
}
.symbol.symbol-11 {
  background-position: 11.11% 20%;
}
.symbol.symbol-12 {
  background-position: 22.22% 20%;
}
.symbol.symbol-13 {
  background-position: 33.33% 20%;
}
.symbol.symbol-14 {
  background-position: 44.44% 20%;
}
.symbol.symbol-15 {
  background-position: 55.55% 20%;
}
.symbol.symbol-16 {
  background-position: 66.66% 20%;
}
.symbol.symbol-17 {
  background-position: 77.77% 20%;
}
.symbol.symbol-18 {
  background-position: 88.88% 20%;
}
.symbol.symbol-19 {
  background-position: 99.99% 20%;
}

.symbol {
  position: absolute;
  background-image: url("./img/cards/symbols.png");
  background-size: 1000%;
  cursor: pointer;
}

.symbol.symbol-00 {
  background-position: 0 0;
  clip-path: polygon(
    29% 27%,
    36% 9%,
    54% 5%,
    70% 26%,
    86% 75%,
    63% 96%,
    34% 96%,
    6% 69%,
    13% 54%
  );
}
.symbol.symbol-01 {
  background-position: 11.11% 0;
  clip-path: circle(41% at 51% 53%);
}
.symbol.symbol-02 {
  background-position: 22.22% 0;
  clip-path: polygon(11% 83%, 30% 97%, 50% 92%, 73% 41%, 69% 3%, 32% 25%);
}
.symbol.symbol-03 {
  background-position: 33.33% 0;
  clip-path: polygon(
    72% 6%,
    90% 30%,
    90% 47%,
    100% 52%,
    85% 69%,
    53% 85%,
    40% 96%,
    18% 81%,
    0 51%,
    8% 16%,
    60% 21%
  );
}
.symbol.symbol-04 {
  background-position: 44.44% 0;
  clip-path: polygon(
    65% 99%,
    32% 92%,
    23% 61%,
    24% 38%,
    21% 14%,
    42% 3%,
    58% 22%,
    69% 42%,
    86% 68%
  );
}
.symbol.symbol-05 {
  background-position: 55.55% 0;
  clip-path: polygon(
    43% 98%,
    27% 84%,
    24% 57%,
    18% 25%,
    44% 6%,
    75% 23%,
    68% 59%,
    59% 86%
  );
}
.symbol.symbol-06 {
  background-position: 66.66% 0;
  clip-path: polygon(
    61% 99%,
    30% 100%,
    31% 79%,
    14% 69%,
    14% 42%,
    31% 24%,
    47% 7%,
    61% 21%,
    78% 35%,
    77% 53%,
    64% 62%
  );
}
.symbol.symbol-07 {
  background-position: 77.77% 0;
  clip-path: polygon(
    5% 89%,
    47% 100%,
    85% 88%,
    71% 73%,
    67% 27%,
    50% 3%,
    23% 20%,
    25% 42%,
    23% 72%
  );
}
.symbol.symbol-08 {
  background-position: 88.88% 0%;
  clip-path: polygon(
    62% 91%,
    41% 96%,
    23% 84%,
    33% 38%,
    37% 21%,
    42% 4%,
    63% 23%,
    58% 41%,
    67% 49%
  );
}
.symbol.symbol-09 {
  background-position: 99.99% 0%;
  clip-path: polygon(93% 89%, 4% 89%, 4% 43%, 24% 14%, 76% 14%, 94% 44%);
}

.symbol.symbol-10 {
  background-position: 0% 20%;
  clip-path: polygon(
    44% 100%,
    35% 49%,
    14% 43%,
    24% 24%,
    24% 5%,
    49% 9%,
    72% 9%,
    74% 29%,
    58% 42%,
    64% 56%,
    57% 93%
  );
}
.symbol.symbol-11 {
  background-position: 11.11% 20%;
  clip-path: polygon(
    19% 7%,
    43% 21%,
    57% 20%,
    75% 3%,
    91% 52%,
    92% 76%,
    72% 95%,
    42% 95%,
    38% 70%,
    15% 70%
  );
}
.symbol.symbol-12 {
  background-position: 22.22% 20%;
  clip-path: polygon(38% 96%, 0% 61%, 52% 11%, 93% 37%, 99% 57%, 87% 79%);
}
.symbol.symbol-13 {
  background-position: 33.33% 20%;
  clip-path: circle(41.5% at 47% 50%);
}
.symbol.symbol-14 {
  background-position: 44.44% 20%;
  clip-path: polygon(
    33% 89%,
    38% 74%,
    13% 58%,
    24% 7%,
    82% 8%,
    86% 37%,
    87% 66%,
    59% 74%,
    51% 98%
  );
}
.symbol.symbol-15 {
  background-position: 55.55% 20%;
  clip-path: polygon(
    53% 97%,
    22% 90%,
    2% 65%,
    45% 3%,
    73% 35%,
    93% 60%,
    76% 87%
  );
}
.symbol.symbol-16 {
  background-position: 66.66% 20%;
  clip-path: polygon(
    91% 97%,
    49% 91%,
    12% 90%,
    21% 73%,
    26% 56%,
    10% 42%,
    9% 9%,
    30% 1%,
    47% 21%,
    72% 39%,
    87% 64%
  );
}
/* ... */

